# bboxlib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/bboxlib/: __init__.py
src/boundingbox/: __init__.py
tests/: test_main.py
