[project]
name = "boundingbox"
version = "0.1.0"
description = "A Python class for working with bounding boxes."
readme = "README.md"
authors = [
    { name = "Håvard Vidme", email = "havard.vidme@pm.me" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
